Less Guava, more Java 8 lambdas